--- a/public/index.html
+++ b/public/index.html
@@ -16,27 +16,25 @@
 <body data-bs-theme="dark">
   <nav class="navbar navbar-expand-lg bg-danger navbar-dark mb-4">
     <div class="container-fluid">
-      <a class="navbar-brand active text-white" href="/index.html">
+      <a class="navbar-brand text-white" href="/index.html">
         <img
           src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
-          alt="Opis slike" width="205" height="24" />
+          alt="Logo" width="205" height="24" />
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link active text-white" href="/index.html"><i
-                class="fa-solid fa-film me-1"></i>
-              Raspored trka</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i>
+          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i
+                class="fa-solid fa-flag-checkered me-1"></i> Raspored trka</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-users me-1"></i>
               Timovi</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i class="fa-solid fa-user me-1"></i>
-              Vozači</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="/driver.html"><i
+                class="fa-solid fa-user me-1"></i> Vozači</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i
-                class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
+                class="fa-solid fa-list-ol me-1"></i> Rezultati</a></li>
         </ul>
       </div>
     </div>
@@ -45,6 +43,7 @@
 
   <div class="container">
     <h1 class="display-4 fw-bold mb-4 text-center">F1 Trke 2025</h1>
+    <a href="/new/race.html" class="btn btn-primary mb-3">+ Dodaj Trku</a>
     <div id="racesContainer" class="row g-4 justify-content-center"></div>
   </div>
 
@@ -101,7 +100,7 @@
           copy.querySelector('.race-laps').innerText = race.lapCount;
           copy.querySelector('.race-length').innerText = race.lapLengthKm;
           copy.querySelector('.track-type').innerText = race.trackType;
-          copy.querySelector('.edit').href = '/edit/race.html?Id=' + race.id;
+          copy.querySelector('.edit').href = '/edit/race.html?id=' + race.id;
           copy.querySelector('.remove').addEventListener('click', () => {
             if (!confirm(`Da li sigurno želite da obrišete ${race.name}?`)) return
             axios.request({
