--- a/public/new/driver.html
+++ b/public/new/driver.html
@@ -6,37 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dodavanje vozača</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 </head>
 
 <body data-bs-theme="dark">
   <nav class="navbar navbar-expand-lg bg-danger navbar-dark mb-4">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="/index.html">
-        <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
-          alt="Opis slike" width="205" height="24" />
+        <img
+          src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
+          alt="Logo" width="205" height="24" />
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i> Raspored trka</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i> Timovi</a></li>
-          <li class="nav-item"><a class="nav-link active text-white" href="/driver.html"><i class="fa-solid fa-user me-1"></i> Vozači</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i
+                class="fa-solid fa-flag-checkered me-1"></i> Raspored trka</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-users me-1"></i>
+              Timovi</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="/driver.html"><i
+                class="fa-solid fa-user me-1"></i> Vozači</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i
+                class="fa-solid fa-list-ol me-1"></i> Rezultati</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="mb-3 container">
+  <div class="container mb-5">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
@@ -45,48 +46,48 @@
       </ol>
     </nav>
 
-    <h3>Dodaj Vozača</h3>
-    <form id="edit">
+    <h3 class="mb-4">Dodaj Vozača</h3>
+    <form id="create">
       <div class="mb-3">
         <label for="firstName" class="form-label">Ime:</label>
-        <input type="text" class="form-control" id="firstName">
+        <input type="text" class="form-control" id="firstName" required>
       </div>
       <div class="mb-3">
         <label for="lastName" class="form-label">Prezime:</label>
-        <input type="text" class="form-control" id="lastName">
+        <input type="text" class="form-control" id="lastName" required>
       </div>
       <div class="mb-3">
         <label for="driverNumber" class="form-label">Broj vozača:</label>
-        <input type="number" class="form-control" id="driverNumber">
+        <input type="number" class="form-control" id="driverNumber" required min="1" step="1">
       </div>
       <div class="mb-3">
         <label for="nationality" class="form-label">Nacionalnost:</label>
-        <input type="text" class="form-control" id="nationality">
+        <input type="text" class="form-control" id="nationality" required>
       </div>
       <div class="mb-3">
         <label for="dateOfBirth" class="form-label">Datum rođenja:</label>
-        <input type="date" class="form-control" id="dateOfBirth">
+        <input type="date" class="form-control" id="dateOfBirth" required>
       </div>
       <div class="mb-3">
         <label for="debutYear" class="form-label">Godina debija:</label>
-        <input type="number" class="form-control" id="debutYear">
+        <input type="number" class="form-control" id="debutYear" required min="1975" step="1">
       </div>
       <div class="mb-3">
         <label for="worldTitles" class="form-label">Broj titula:</label>
-        <input type="number" class="form-control" id="worldTitles">
+        <input type="number" class="form-control" id="worldTitles" required min="0" step="1" value="0">
       </div>
       <div class="mb-3">
         <label for="profileImage" class="form-label">URL slike profila:</label>
-        <input type="text" class="form-control" id="profileImage">
+        <input type="text" class="form-control" id="profileImage" required>
       </div>
       <div class="mb-3">
-        <label for="teamId" class="form-label">Tim:</label>
-        <select class="form-select" id="team">
-                        <option value="0" selected>Odaberite tim</option>
-                    </select>
+        <label for="team" class="form-label">Tim:</label>
+        <select class="form-select" id="team" required>
+          <option value="0" selected>Odaberite tim</option>
+        </select>
       </div>
       <button type="submit" class="btn btn-success">
-        <i class="fa-solid fa-floppy-disk"></i> Sačuvaj
+        <i class="fa-solid fa-floppy-disk me-1"></i> Sačuvaj
       </button>
     </form>
   </div>
@@ -95,41 +96,69 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
   <script>
-     axios.get('/api/teams')
-    .then(response => {
-      const teamSelect = document.getElementById('team');
-      response.data.forEach(team => {
-        const option = document.createElement('option');
-        option.value = team.id;
-        option.textContent = team.name;
-        teamSelect.appendChild(option);
+    const teamSelect = document.getElementById('team');
+    axios.get('/api/teams')
+      .then(rsp => {
+        rsp.data.forEach(team => {
+          const option = document.createElement('option');
+          option.value = team.id;
+          option.innerText = team.name;
+          teamSelect.appendChild(option);
+        });
+      }).catch(err => {
+        alert("Greška prilikom učitavanja timova.");
+        console.error(err);
+      });
+
+    document.getElementById('create').addEventListener('submit', (e) => {
+      e.preventDefault();
+
+      const driverNumber = Number(document.getElementById('driverNumber').value);
+      const debutYear = Number(document.getElementById('debutYear').value);
+      const worldTitles = Number(document.getElementById('worldTitles').value);
+      const teamId = Number(teamSelect.value);
+
+      if (teamId === 0) {
+        alert("Molimo odaberite tim.");
+        return;
+      }
+      if (driverNumber < 1) {
+        alert("Broj vozača ne može biti manji od 1.");
+        return;
+      }
+      if (debutYear < 1975) {
+        alert("Godina debija ne može biti manja od 1975.");
+        return;
+      }
+      if (worldTitles < 0) {
+        alert("Broj titula ne može biti negativan.");
+        return;
+      }
+
+      axios.request({
+        url: `/api/drivers`,
+        method: 'post',
+        data: {
+          firstName: document.getElementById('firstName').value,
+          lastName: document.getElementById('lastName').value,
+          driverNumber,
+          nationality: document.getElementById('nationality').value,
+          dateOfBirth: document.getElementById('dateOfBirth').value,
+          debutYear,
+          worldTitles,
+          profileImage: document.getElementById('profileImage').value,
+          team: {
+            id: teamId
+          }
+        }
+      }).then(() => {
+        window.location.href = '/driver.html';
+      }).catch(err => {
+        alert("Greška prilikom kreiranja vozača. Proverite da li su sva polja ispravno popunjena.");
+        console.error(err);
       });
     });
-
-    document.getElementById('edit').addEventListener('submit', (e) => {
-    e.preventDefault();
-
-    const teamId = Number(document.getElementById('team').value);
-    if (teamId === 0) {
-      alert("Molimo odaberite tim.");
-      return;
-    }
-
-    axios.post('/api/drivers', {
-      firstName: document.getElementById('firstName').value,
-      lastName: document.getElementById('lastName').value,
-      driverNumber: Number(document.getElementById('driverNumber').value),
-      nationality: document.getElementById('nationality').value,
-      dateOfBirth: document.getElementById('dateOfBirth').value,
-      debutYear: Number(document.getElementById('debutYear').value),
-      worldTitles: Number(document.getElementById('worldTitles').value),
-      profileImage: document.getElementById('profileImage').value,
-      teamId: teamId
-    }).then(() => {
-      window.location.href = '/driver.html';
-    });
-  });
-</script>
+  </script>
 </body>
 
 </html>
