--- a/public/result.html
+++ b/public/result.html
@@ -21,21 +21,20 @@
           src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
           alt="Logo" width="205" height="24" />
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i>
-              Raspored trka</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i>
+          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i
+                class="fa-solid fa-flag-checkered me-1"></i> Raspored trka</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-users me-1"></i>
               Timovi</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i class="fa-solid fa-user me-1"></i>
-              Vozači</a></li>
-          <li class="nav-item"><a class="nav-link active text-white" href="/result.html"><i
-                class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="/driver.html"><i
+                class="fa-solid fa-user me-1"></i> Vozači</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i
+                class="fa-solid fa-list-ol me-1"></i> Rezultati</a></li>
         </ul>
       </div>
     </div>
@@ -43,7 +42,7 @@
 
   <div class="container">
     <h1 class="display-4 fw-bold mb-4 text-center">Rezultati trka F1 2025</h1>
-    <a href="/new/team.html" class="btn btn-primary mb-3">+ Dodaj Tim</a>
+    <a href="/new/result.html" class="btn btn-primary mb-3">+ Dodaj rezultat</a>
 
     <div class="card shadow">
       <div class="card-body">
