--- a/public/team.html
+++ b/public/team.html
@@ -39,24 +39,22 @@
       <a class="navbar-brand text-white" href="/index.html">
         <img
           src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
-          alt="Opis slike" width="205" height="24" />
+          alt="Logo" width="205" height="24" />
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i>
-              Raspored trka</a></li>
-          <li class="nav-item"><a class="nav-link active text-white" href="/list.html"><i
-                class="fa-solid fa-user me-1"></i>
+          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i
+                class="fa-solid fa-flag-checkered me-1"></i> Raspored trka</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-users me-1"></i>
               Timovi</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i class="fa-solid fa-user me-1"></i>
-              Vozači</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="/driver.html"><i
+                class="fa-solid fa-user me-1"></i> Vozači</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i
-                class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
+                class="fa-solid fa-list-ol me-1"></i> Rezultati</a></li>
         </ul>
       </div>
     </div>
@@ -127,12 +125,12 @@
         document.getElementById('teamCard').hidden = false;
         document.querySelector('.edit').href = '/edit/team.html?id=' + team.id;
         document.querySelector('.remove').addEventListener('click', () => {
-                        if (!confirm(`Da li sigurno želite da obrišete ${team.name}?`)) return
-                        axios.request({
-                            url: `/api/teams/${team.id}`,
-                            method: 'delete'
-                        }).then(rsp => window.location.reload())
-                    })
+          if (!confirm(`Da li sigurno želite da obrišete ${team.name}?`)) return
+          axios.request({
+            url: `/api/teams/${team.id}`,
+            method: 'delete'
+          }).then(rsp => window.location.reload())
+        })
         document.title = rsp.data.shortName;
       });
 
