--- a/public/edit/team.html
+++ b/public/edit/team.html
@@ -96,7 +96,7 @@
       </div>
       <div class="mb-3">
         <label for="foundedYear" class="form-label">Godina osnivanja:</label>
-        <input type="number" class="form-control" id="foundedYear">
+        <input type="number" class="form-control" id="foundedYear" min="1950" max="2025">
       </div>
       <div class="mb-3">
         <label for="teamChef" class="form-label">Šef tima:</label>
@@ -104,7 +104,7 @@
       </div>
       <div class="mb-3">
         <label for="championships" class="form-label">Broj titula:</label>
-        <input type="number" class="form-control" id="championships">
+        <input type="number" class="form-control" id="championships" min="0">
       </div>
       <div class="mb-3">
         <label for="baseLocation" class="form-label">Lokacija baze:</label>
@@ -160,6 +160,10 @@
 
             if (foundedYear < 1950) {
               alert('Godina osnivanja ne može biti manja od 1950.');
+              return; 
+            }
+            if(foundedYear > 2025){
+              alert('Godina osnivanja ne može biti veća od 2025.');
               return; 
             }
 
