--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
             <p class="mb-1"><strong>Lokacija:</strong> <span class="race-location"></span>, <span
                 class="race-country"></span></p>
             <p class="mb-1"><strong>Datum:</strong> <span class="race-date"></span></p>
-            <p class="mb-1"><strong>Krugova:</strong> <span class="race-laps"></span> | <strong>Dužina kruga:</strong>
+            <p class="mb-1"><strong>br. Krugova:</strong> <span class="race-laps"></span> | <strong>Dužina kruga:</strong>
               <span class="race-length"></span> km
             </p>
             <span class="badge rounded-pill text-bg-light track-type text-dark"></span>
