--- a/public/edit/result.html
+++ b/public/edit/result.html
@@ -54,31 +54,31 @@
       </div>
       <div class="mb-3">
         <label for="driver" class="form-label">Vozač:</label>
-        <select class="form-select" id="driver"></select>
+        <select class="form-select" id="driver" required></select>
       </div>
       <div class="mb-3">
         <label for="race" class="form-label">Trka:</label>
-        <select class="form-select" id="race"></select>
+        <select class="form-select" id="race" required></select>
       </div>
       <div class="mb-3">
         <label for="position" class="form-label">Pozicija:</label>
-        <input type="number" class="form-control" id="position">
+        <input type="number" class="form-control" id="position" required min="1">
       </div>
       <div class="mb-3">
         <label for="startingPosition" class="form-label">Startna pozicija:</label>
-        <input type="number" class="form-control" id="startingPosition">
+        <input type="number" class="form-control" id="startingPosition" required min="1" step="1">
       </div>
       <div class="mb-3">
         <label for="lapsCompleted" class="form-label">Završeni krugovi:</label>
-        <input type="number" class="form-control" id="lapsCompleted">
+        <input type="number" class="form-control" id="lapsCompleted" required min="0" max="99">
       </div>
       <div class="mb-3">
-        <label for="pitStops" class="form-label">Pit Stopova:</label>
-        <input type="number" class="form-control" id="pitStops">
+        <label for="pitStops" class="form-label">Broj Pit Stopova:</label>
+        <input type="number" class="form-control" id="pitStops" required min="1"  step="1" max="9">
       </div>
       <div class="mb-3">
         <label for="status" class="form-label">Status:</label>
-        <select class="form-control" id="status">
+        <select class="form-control" id="status" required>
           <option value="FINISHED">FINISHED</option>
           <option value="DNF">DNF</option>
           <option value="DSQ">DSQ</option>
