Chenged fronted logic

--- a/public/edit/team.html
+++ b/public/edit/team.html
@@ -88,39 +88,39 @@
       </div>
       <div class="mb-3">
         <label for="name" class="form-label">Naziv tima:</label>
-        <input type="text" class="form-control" id="name">
+        <input type="text" class="form-control" id="name" required>
       </div>
       <div class="mb-3">
         <label for="shortName" class="form-label">Kratko ime:</label>
-        <input type="text" class="form-control" id="shortName">
+        <input type="text" class="form-control" id="shortName" required>
       </div>
       <div class="mb-3">
         <label for="foundedYear" class="form-label">Godina osnivanja:</label>
-        <input type="number" class="form-control" id="foundedYear" min="1950" max="2025">
+        <input type="number" class="form-control" id="foundedYear" required min="1950" max="2025">
       </div>
       <div class="mb-3">
         <label for="teamChef" class="form-label">Šef tima:</label>
-        <input type="text" class="form-control" id="teamChef">
+        <input type="text" class="form-control" id="teamChef" required>
       </div>
       <div class="mb-3">
         <label for="championships" class="form-label">Broj titula:</label>
-        <input type="number" class="form-control" id="championships" min="0">
+        <input type="number" class="form-control" id="championships" required min="0">
       </div>
       <div class="mb-3">
         <label for="baseLocation" class="form-label">Lokacija baze:</label>
-        <input type="text" class="form-control" id="baseLocation">
+        <input type="text" class="form-control" id="baseLocation" required>
       </div>
       <div class="mb-3">
         <label for="engineSupplier" class="form-label">Dobavljač motora:</label>
-        <input type="text" class="form-control" id="engineSupplier">
+        <input type="text" class="form-control" id="engineSupplier" required>
       </div>
       <div class="mb-3">
         <label for="carName" class="form-label">Naziv bolida:</label>
-        <input type="text" class="form-control" id="carName">
+        <input type="text" class="form-control" id="carName" required>
       </div>
       <div class="mb-3">
         <label for="logoUrl" class="form-label">URL logotipa:</label>
-        <input type="text" class="form-control" id="logoUrl">
+        <input type="text" class="form-control" id="logoUrl" required>
       </div>
       <button type="submit" class="btn btn-success">
         <i class="fa-solid fa-floppy-disk"></i> Sačuvaj
