--- a/public/new/driver.html
+++ b/public/new/driver.html
@@ -58,7 +58,7 @@
       </div>
       <div class="mb-3">
         <label for="driverNumber" class="form-label">Broj vozača:</label>
-        <input type="number" class="form-control" id="driverNumber" required min="1" step="1">
+        <input type="number" class="form-control" id="driverNumber" required min="1" value="1" step="1">
       </div>
       <div class="mb-3">
         <label for="nationality" class="form-label">Nacionalnost:</label>
@@ -66,12 +66,12 @@
       </div>
       <div class="mb-3">
         <label for="dateOfBirth" class="form-label">Datum rođenja:</label>
-        <input type="date" class="form-control" id="dateOfBirth" required min="1970-01-01">
+        <input type="date" class="form-control" id="dateOfBirth" required min="1970-01-01" max="2008-01-01" value="2000-01-01">
       </div>
 
       <div class="mb-3">
         <label for="debutYear" class="form-label">Godina debija:</label>
-        <input type="number" class="form-control" id="debutYear" required min="1975" step="1">
+        <input type="number" class="form-control" id="debutYear" required min="1975" value="1975" step="1">
       </div>
       <div class="mb-3">
         <label for="worldTitles" class="form-label">Broj titula:</label>
