--- a/public/edit/driver.html
+++ b/public/edit/driver.html
@@ -69,7 +69,7 @@
       </div>
       <div class="mb-3">
         <label for="dateOfBirth" class="form-label">Datum rođenja:</label>
-        <input type="date" class="form-control" id="dateOfBirth" required>
+        <input type="date" class="form-control" id="dateOfBirth" min ="1970-01-01" max = "2008-01-01" required>
       </div>
       <div class="mb-3">
         <label for="debutYear" class="form-label">Godina debija:</label>
