--- a/public/edit/race.html
+++ b/public/edit/race.html
@@ -54,35 +54,35 @@
       </div>
       <div class="mb-3">
         <label for="name" class="form-label">Naziv trke:</label>
-        <input type="text" class="form-control" id="name">
+        <input type="text" class="form-control" id="name" required>
       </div>
       <div class="mb-3">
         <label for="location" class="form-label">Lokacija:</label>
-        <input type="text" class="form-control" id="location">
+        <input type="text" class="form-control" id="location" required>
       </div>
       <div class="mb-3">
         <label for="country" class="form-label">Država:</label>
-        <input type="text" class="form-control" id="country">
+        <input type="text" class="form-control" id="country" required>
       </div>
       <div class="mb-3">
         <label for="raceDate" class="form-label">Datum trke:</label>
-        <input type="date" class="form-control" id="raceDate" min="2025-01-01" max="2025-12-31" >
+        <input type="date" class="form-control" id="raceDate" min="2025-01-01" max="2025-12-31" required >
       </div>
       <div class="mb-3">
         <label for="lapLengthKm" class="form-label">Dužina kruga (km):</label>
-        <input type="number" class="form-control" id="lapLengthKm" min="1"  step="0.001">
+        <input type="number" class="form-control" id="lapLengthKm" min="1"  step="0.001" required>
       </div>
       <div class="mb-3">
         <label for="lapCount" class="form-label">Broj krugova:</label>
-        <input type="number" class="form-control" id="lapCount" min="1" max="99">
+        <input type="number" class="form-control" id="lapCount" min="1" max="99" required>
       </div>
       <div class="mb-3">
         <label for="trackType" class="form-label">Tip staze:</label>
-        <input type="text" class="form-control" id="trackType">
+        <input type="text" class="form-control" id="trackType" required>
       </div>
       <div class="mb-3">
         <label for="racePicture" class="form-label">URL slike trke:</label>
-        <input type="text" class="form-control" id="racePicture">
+        <input type="text" class="form-control" id="racePicture" required>
       </div>
       <button type="submit" class="btn btn-success">
         <i class="fa-solid fa-floppy-disk"></i> Sačuvaj
